// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Unit Test> Game Provider should return null if the game id is not provided 1`] = `
<div>
  <div>
    {"id":"","gameStage":0,"activeRow":0,"activeIndex":0,"cardCount":4,"flipDelay":5000,"players":{},"tiers":[],"votes":{}}
  </div>
</div>
`;

exports[`<Unit Test> Game Provider should subscribe to the useGameState, and provide it as a value 1`] = `
<div>
  <div>
    {"id":"","gameStage":8,"activeRow":0,"activeIndex":0,"cardCount":4,"flipDelay":5000,"players":{},"tiers":[],"votes":{}}
  </div>
</div>
`;
